--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>mscx-shop-mapper</module>
         <module>mscx-shop-service</module>
         <module>mscx-shop-api</module>
+        <module>mybatis-generator-tool</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -67,7 +68,21 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.0</version>
+            <version>2.1.1</version>
+        </dependency>
+        <!-- 通用mapper逆向工具 -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
         </dependency>
     </dependencies>
+
+
 </project>
