fixed mybatis generator bug

--- a/mybatis-generator-tool/src/main/resources/generator/config.properties
+++ b/mybatis-generator-tool/src/main/resources/generator/config.properties
@@ -1,5 +1,6 @@
 jdbc.driverClass = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/expensiveshop?characterEncoding=UTF-8&useSSL=false&useUnicode=true&serverTimezone=UTC
+jdbc.url = jdbc:mysql://localhost:3306/expensiveshop?nullCatalogMeansCurrent=true&characterEncoding=UTF-8&useSSL\
+  =false&useUnicode=true&serverTimezone=UTC
 jdbc.user = root
 jdbc.password = 12345678
 
