--- a/mscx-shop-api/src/main/resources/application.yml
+++ b/mscx-shop-api/src/main/resources/application.yml
@@ -40,3 +40,11 @@ swagger:
     url: http://www.life-runner.com
   base-package: com.liferunner
   base-path: /**
+
+shop:
+  cors:
+    allowOrigin: http://localhost:8080
+    allowCredentials: true
+    allowedMethod: '*'
+    allowedHeader: '*'
+
