--- a/mscx-shop-api/pom.xml
+++ b/mscx-shop-api/pom.xml
@@ -21,10 +21,10 @@
     <build>
         <plugins>
             <!--springboot 构建可执行fat jars必须的插件，如不添加，在生产环境会有问题-->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
             <!--生成 AsciiDoc 文档(swagger2markup)-->
             <plugin>
                 <groupId>io.github.swagger2markup</groupId>
@@ -32,7 +32,7 @@
                 <version>1.3.3</version>
                 <configuration>
                     <swaggerInput>http://localhost:8088/v2/api-docs</swaggerInput>
-                    <outputDir>src/docs/asciidoc/generated-by-plugin</outputDir>
+                    <outputDir>src/docs/asciidoc/generated-doc</outputDir>
                     <config>
                         <swagger2markup.markupLanguage>ASCIIDOC</swagger2markup.markupLanguage>
                     </config>
@@ -44,7 +44,7 @@
                 <artifactId>asciidoctor-maven-plugin</artifactId>
                 <version>1.5.6</version>
                 <configuration>
-                    <sourceDirectory>src/docs/asciidoc/generated-by-plugin</sourceDirectory>
+                    <sourceDirectory>src/docs/asciidoc/generated-doc</sourceDirectory>
                     <outputDirectory>src/docs/asciidoc/html</outputDirectory>
                     <backend>html</backend>
                     <sourceHighlighter>coderay</sourceHighlighter>
