--- a/mscx-shop-common/pom.xml
+++ b/mscx-shop-common/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>mscx-shop-common</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
+        </dependency>
+    </dependencies>
 </project>
