--- a/mscx-shop-api/src/main/resources/application.yml
+++ b/mscx-shop-api/src/main/resources/application.yml
@@ -25,6 +25,8 @@ spring:
 mybatis:
   type-aliases-package: com.liferunner.pojo          # 所有POJO类所在包路径
   mapper-locations: classpath:mapper/*.xml      # mapper映射文件
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 # 配置swagger2
 swagger:
