--- a/mscx-shop-api/src/main/resources/log4j.properties
+++ b/mscx-shop-api/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.additivity.org.apache=true
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.threshold=INFO
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%-5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
@@ -12,4 +12,4 @@ log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH-mm
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.file.Threshold=INFO
 log4j.appender.file.append=true
-log4j.appender.file.File=/shop/logs/shop-api/work-log.log
+log4j.appender.file.File=/logs/shop-api-log.log
