--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.1</version>
         </dependency>
+        <!-- 引入mybatis-pagehelper 插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.12</version>
+        </dependency>
         <!-- 通用mapper逆向工具 -->
         <dependency>
             <groupId>tk.mybatis</groupId>
