--- a/mscx-shop-api/src/main/resources/application.yml
+++ b/mscx-shop-api/src/main/resources/application.yml
@@ -21,6 +21,10 @@ spring:
       pool-name: DateSourceHikariCP     # 连接池名字
       max-lifetime: 1800000           # 连接的生命时长（毫秒），超时而且没被使用则被释放（retired），默认:30分钟 1800000ms
       connection-test-query: SELECT 1
+  servlet:
+    multipart:
+      max-file-size: 204800 #文件大小不能超过200kb
+      max-request-size: 512000 #请求大小不能超过500kb
 # mybatis 配置
 mybatis:
   type-aliases-package: com.liferunner.pojo          # 所有POJO类所在包路径
