--- a/mscx-shop-api/src/main/resources/application-prod.yml
+++ b/mscx-shop-api/src/main/resources/application-prod.yml
@@ -5,6 +5,11 @@ spring:
     url: jdbc:mysql://localhost:3306/expensiveshop?characterEncoding=UTF-8&useSSL=false&useUnicode=true&serverTimezone=Hongkong
     username: root
     password: 12345678
+  redis:
+    host: 127.0.0.1
+    database: 0
+    port: 6379
+    password: 12345678
 
 mybatis:
   configuration:
