config redis sentinel

--- a/mscx-shop-api/src/main/resources/application-dev.yml
+++ b/mscx-shop-api/src/main/resources/application-dev.yml
@@ -5,11 +5,19 @@ spring:
     url: jdbc:mysql://localhost:3306/expensiveshop?characterEncoding=UTF-8&useSSL=false&useUnicode=true&serverTimezone=Hongkong
     username: root
     password: 12345678
+  # redis 单机节点配置
+#  redis:
+#    host: 127.0.0.1
+#    database: 0
+#    port: 6379
+#    # password: 12345678
+  # redis 主备配置
   redis:
-    host: 127.0.0.1
+    sentinel:
+      master: 127.0.0.1
+      nodes: 192.168.1.100,192.168.1.101,192.168.1.102
     database: 0
-    port: 6379
-    # password: 12345678
+    password: 12345678
 
 mybatis:
   configuration:
