--- a/mscx-shop-api/src/main/resources/log4j.properties
+++ b/mscx-shop-api/src/main/resources/log4j.properties
@@ -12,4 +12,4 @@ log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH-mm
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.file.Threshold=INFO
 log4j.appender.file.append=true
-log4j.appender.file.File=/logs/shop-api-log.log
+log4j.appender.file.File=${user.home}/logs/shop-api-log.log
