implement sync shopcart from redis & cookie

--- a/mscx-shop-api/src/main/resources/application-dev.yml
+++ b/mscx-shop-api/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
     host: 192.168.14.201
     database: 0
     port: 6379
-    # password: 12345678
+    password: 12345678
   # redis 主备配置
 #  redis:
 #    sentinel:
