--- a/mscx-shop-api/src/main/resources/application-dev.yml
+++ b/mscx-shop-api/src/main/resources/application-dev.yml
@@ -11,13 +11,13 @@ spring:
 #    database: 0
 #    port: 6379
 #    password: 12345678
-  # redis 主备配置
+  # redis 哨兵模式（主备配置）
   redis:
-    sentinel:
-      master: 192.168.14.202
-      nodes: 192.168.14.201,192.168.14.202,192.168.14.203
     database: 0
     password: 12345678
+    sentinel:
+      master: isaac-master
+      nodes: 192.168.14.201:26379,192.168.14.202:26379,192.168.14.203:26379
 
 mybatis:
   configuration:
