--- a/mscx-shop-sso/pom.xml
+++ b/mscx-shop-sso/pom.xml
@@ -18,5 +18,10 @@
       <artifactId>mscx-shop-service</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
   </dependencies>
 </project>
