整合 分布式文件存储系统 FastDfs

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>mscx-shop-api</module>
     <module>mscx-shop-sso</module>
     <module>mscx-shop-search</module>
+    <module>mscx-shop-fastdfs</module>
   </modules>
   <packaging>pom</packaging>
 
