--- a/mscx-shop-fastdfs/pom.xml
+++ b/mscx-shop-fastdfs/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <fastdfs.version>1.27.2</fastdfs.version>
+    <aliyun.oss.version>3.9.1</aliyun.oss.version>
   </properties>
 
   <dependencies>
@@ -28,6 +29,11 @@
       <artifactId>fastdfs-client</artifactId>
       <version>${fastdfs.version}</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.aliyun.oss</groupId>
+      <artifactId>aliyun-sdk-oss</artifactId>
+      <version>${aliyun.oss.version}</version>
     </dependency>
   </dependencies>
 
